== 0.9.11

* Allow config.gems array to contain regexps and Gem::Dependency objects as well
 (assist from Jani Soila)
* Fix bug ensuring you can += and -= for config.gems

== 0.9.10

* Upgraded to JRuby-Rack 0.9.1. Fixes JRUBY-2620, JRUBY-2594, JRUBY-2507.
* Now verified to work with Camping and Sinatra. See
  http://github.com/nicksieger/jruby-rack/tree/master/examples for examples
  of how to configure Warbler to package your Camping and Sinatra apps.
* Upgraded to JRuby 1.1.3.
* Log files are no longer packaged in the .war file.
* Fix #<Warbler::WebxmlOpenStruct ...> appearing in web.xml and document workarounds.
* Add config.autodeploy_dir that, when specified, will create the war there.

== 0.9.9

* Now shipping with JRuby-Rack 0.9!
* Upgrade to JRuby 1.1.1
* warble.rb and web.xml.erb have changed as a result of the change to JRuby-Rack -- we
  recommend comparing the new base copies with any existing configuration you have to
  make sure you pick up the differences.
* Config changes:
** config.webxml.booter chooses what kind of application to use (:rails, :merb or plain :rack).
** config.webxml.pool.* have been replaced by config.webxml.jruby.(min|max).runtimes
** config.webxml.standalone and config.webxml.jruby_home no longer have any effect.

== 0.9.5

* Fix bug in plugin warbler.rake task file that would favor loading warbler from gems before the version 
  installed as a plugin
* Upgrade to JRuby 1.1 final and Goldspike 1.6.1

== 0.9.4

* Update bundled JRuby to 1.1RC3 and Goldspike to 1.6.
* Fix inclusion of gems with platform-specific bits (e.g., Hpricot)

== 0.9.3

* Update bundled JRuby to 1.1RC2, and Goldspike to 1.5.
* The bundled JRuby and Goldspike now require JDK 5 or greater. If you wish to use JDK 1.4, use Warbler 0.9.2.

== 0.9.2

* Update bundled JRuby to version 1.0.3 and Goldspike 1.4.
* Add config.java_classes to allow you to copy loose Java classes into WEB-INF/classes.